<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <Spinner
        android:id="@+id/muses_spinner"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/refresh" />

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/connect" />

        <Button
            android:id="@+id/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/disconnect" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/status"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/con_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/undefined"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/version"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/undefined"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pause"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:text="@string/pause" />
    </LinearLayout>

</LinearLayout>